# FastAPIProject

./: .gitignore  pyproject.toml
fastapi-application/: main.py
