[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "My FastAPI Project"
authors = ["user to1990to.o@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.14"
fastapi = "^0.136.3"
uvicorn = {extras = ["standard"], version = "^0.49.0"}
pydantic = {extras = ["email"], version = "^2.13.4"}
pydantic-settings = "^2.14.1"
